Bugfix: Fix CSS bugs Adjust the intro page Fix bug not showing incorrect answers in question correction Fix json file for questions

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -22,6 +22,8 @@ body {
   overflow: auto;
   position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
   &:after {
     content: "";
     background-image: url();
@@ -60,8 +62,6 @@ body {
 }
 
 .game {
-  position: absolute;
-  top: calc(50% - 30vh);
   width: 90vw;
   height: 60vh;
   min-height: max-content;
@@ -91,8 +91,11 @@ body {
     }
 
     .intro {
+      height: 100%;
       width: calc(50% - 100px);
+      border-radius: 0;
       transition: 0.3s;
+      box-shadow: none;
 
       @media (max-width: 980px), (max-height: 580px) {
         width: 100%;
@@ -127,7 +130,7 @@ body {
 .game-area {
   min-width: 50%;
   background-color: #fff;
-  overflow: auto;
+  overflow-y: auto;
   padding: 40px;
 
   @media (max-width: 980px), (max-height: 580px) {
@@ -136,22 +139,24 @@ body {
 }
 
 .intro {
-  background-size: cover;
-  height: 100%;
-  width: 50dvw;
+  height: 40dvh;
+  width: 100%;
+  border-radius: 12px;
+  overflow: auto;
   flex-shrink: 0;
   color: #000;
-  background-position: center;
   position: relative;
   display: flex;
   align-items: center;
   background: linear-gradient(
-    251deg,
-    #00b8ff52 -53%,
-    rgba(255, 255, 255, 0) 65%
-  );
+      251deg,
+      #00b8ff52 -53%,
+      rgba(255, 255, 255, 0) 65%
+    ),
+    center / cover;
   justify-content: center;
   backdrop-filter: blur(30px);
+  box-shadow: 0 0 80px rgb(0, 0, 0), 0 0 0 16px rgba(152, 236, 255, 0.1);
 
   &-inner {
     text-align: center;
@@ -360,7 +365,9 @@ body {
 }
 
 .correction {
+  max-height: 50dvh;
   width: 100%;
+  overflow: auto;
 }
 
 .correction [data-selected="true"].is-true label {
